# bluewatch

./: .gitignore  CLAUDE.md  HTTPX_FIX.md  README.md  bluewatch.py  bluewatch_tls_shim.py  config.toml.example  pushover-notify-sample.sh  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
