[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluewatch"
version = "0.1.0"
description = "Command-line tool for scanning Bluesky user timelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "atproto"
]

[project.scripts]
bluewatch = "bluewatch:cli"