[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluewatch"
version = "1.3.1"
description = "Command-line tool for scanning Bluesky user timelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "atproto",
    "curl-cffi>=0.15.0",
]

[project.scripts]
bluewatch = "bluewatch:cli"
